@@ -270,6 +270,101 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
         return DOM.addListener('error', pListener, pElement, pUseCapture);
     };
     
+    /**
+     * crossbrowser create event
+     * 
+     * @param pEventName
+     * @param pKeyCode - not necessarily
+     */
+    DOM.createEvent             = function(pEventName, pKeyCode){
+        var lEvent = document.createEvent('Event');
+        
+        lEvent.initEvent(pEventName, true, true);
+        
+        if(pKeyCode)
+            lEvent.keyCode = pKeyCode;
+        
+        lEvent.isDefaultPrevented = function(){
+            return this.defaultPrevented;
+        };
+        
+        return lEvent;
+    };
+    
+    
+    /**
+     * create keydown event
+     * 
+     * @param pKeyCode
+     */
+    DOM.createKeyEvent          = function(pKeyCode){
+        return DOM.createEvent('keydown', pKeyCode);
+    };
+    
+    /**
+     * create click event
+     * 
+     * @param pKeyCode
+     */
+    DOM.createClickEvent          = function(){
+        return DOM.createEvent('click');
+    };
+    
+    /**
+     * create click event
+     * 
+     * @param pKeyCode
+     */
+    DOM.createDblClickEvent          = function(){
+        return DOM.createEvent('dblclick');
+    };
+    
+    /**
+     * dispatch event
+     * 
+     * @param pEvent
+     */
+    DOM.dispatch                = function(pEvent, pElement){
+        return (pElement || window).dispatchEvent(pEvent);
+    };
+    
+    /**
+     * dispatch keydown event
+     * 
+     * @param pKeyCode
+     * @param pElement
+     */
+    DOM.dispatchKeyEvent        = function(pKeyCode, pElement){
+        var lEvent  = DOM.createKeyEvent(pKeyCode),
+            lRet    = DOM.dispatch(lEvent, pElement);
+        
+        return lRet;
+    };
+    
+    /**
+     * dispatch click event
+     * 
+     * @param pElement
+     */
+    DOM.dispatchClickEvent        = function(pElement){
+        var lEvent  = DOM.createClickEvent(),
+            lRet    = DOM.dispatch(lEvent, pElement);
+        
+        return lRet;
+    };
+    
+    /**
+     * dispatch dblclick event
+     * 
+     * @param pElement
+     */
+    DOM.dispatchDblClickEvent        = function(pElement){
+        var lEvent  = DOM.createDblClickEvent(),
+            lRet    = DOM.dispatch(lEvent, pElement);
+        
+        return lRet;
+    };
+    
     
     /**
      * load file countent thrue ajax
